<resources>
    <string name="app_name">Handymano</string>
    <string name="login_hint_username">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="or">OR</string>
    <string name="register_button_text">Register</string>
    <string name="choice_button_looking">I am looking for a service</string>
    <string name="choice_button_offer">I am offering a service</string>
    <string name="cancel">Cancel</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_phoneNo">Phone Number</string>
    <string name="register_hint_email">E-mail</string>
    <string name="register_hint_username">Username</string>
    <string name="user_register_button">Register</string>
    <string name="services_category">Category of services</string>
    <string name="years_of_experience">Experience</string>
    <string name="user_logout_button">Log out</string>
    <string name="icon_credits">Icons made by Freepik from flaticon.com</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_logout">Log out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="currentLocation">Location</string>
    <string name="searchByLocation">Search</string>
    <string name="saveLocation">Save location</string>
    <string name="travelingRadius">Traveling radius (0 is whole Ireland)</string>
    <string name="chooseLocation">Choose location</string>
    <string name="btn_mt">0dp</string>
    <string name="reset_password">Reset password</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="expandSearch">Expand search</string>
    <string name="project_title">Project title</string>
    <string name="project_description">Project description</string>
    <string name="save_project">Save project</string>
    <string name="create_new_project">New project</string>
    <string name="add_pictures">Add pictures</string>
    <string name="new_job">New job</string>
    <string name="job_title">Title</string>
    <string name="job_description">Description</string>
    <string name="save_job">Save job</string>
    <string name="current_image_count">Current image</string>
    <string name="address">Address</string>
    <string name="option_1">Edit</string>
    <string name="option_2">Delete</string>
    <string name="save_changes">Save changes</string>
    <string name="experience">Experience</string>
    <string name="job_category">Job category</string>
    <string name="job_status">Job status</string>
    <string name="message_advertiser">Message advertiser</string>
    <string name="add_feedback">Add feedback</string>

</resources>