<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessRegistrationActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerBusinessUsername_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/register_hint_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerBusinessUsername_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerBusinessEmail_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBusinessUsername_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerBusinessEmail_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerBusinessPhoneNo_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_hint_phoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBusinessEmail_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerBusinessPhoneNo_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/servicesCategory_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/services_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBusinessPhoneNo_layout">

        <!-- android:hint="@string/hint_text"> -->

        <AutoCompleteTextView
            android:id="@+id/servicesCategory_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yearsOfExperience_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/years_of_experience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicesCategory_layout">

        <!-- android:hint="@string/hint_text"> -->

        <AutoCompleteTextView
            android:id="@+id/yearsOfExperience_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerBusinessPassword_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/register_hint_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearsOfExperience_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerBusinessPassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>



    <FrameLayout
        android:id="@+id/frame_location"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@color/white"
        android:clickable="false"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="56dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_saveLocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:text="@string/saveLocation"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_businessRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="ClickRegisterBusiness"
        android:text="@string/user_register_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_or4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_businessRegisterCancel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:onClick="ClickCancelBusinessRegistration"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_or4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:text="@string/or"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_or5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:text="@string/or"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_chooseLocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:text="@string/chooseLocation"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>